--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
            <img src="images/me.png" alt="">
        </div>
    </section>
+   <section class="dream-big">
+       <div class="half-width">
+           <img src="images/me.png" alt="">
+       </div>
+       <div class="half-width">
+           <h1>Dream Big</h1>
+           <h2>Became a Web Developer</h2>
+<P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia ipsum perferendis error ullam autem corrupti velit a? A, sunt voluptatum quod sed nostrum officiis explicabo laudantium aspernatur consequuntur modi totam!</P>
+<a class="link-button" target="_blank" href="https://www.linkedin.com/in/eity-islam-923a74200/">Download Resume</a>
+       </div>
+       
+   </section>
 </body>
 </html>
