--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <section class="top-banner">
+   <section class="top-banner flexible-container">
        <div class="half-width">
         <h1>Welcome To</h1> 
         <h1><span class="span-class">Eity</span> World!</h1>
@@ -24,7 +24,7 @@
            <img src="images/me.png" alt="">
        </div>
    </section>
-   <section class="dream-big">
+   <section class="dream-big flexible-container">
        <div class="half-width">
            <img src="images/me.png" alt="">
        </div>
@@ -36,5 +36,23 @@
        </div>
        
    </section>
+   <section class="expericence-area"> 
+       <h1> Experiences</h1>
+      <div class="flexible-container">
+        <div id="full-stack-experience" class="experience-item">
+            <h2>Full Stack Developer</h2>
+            <h3 class="span-class">2022-Present |Pro Level Developer</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo quod velit, molestias quae nostrum harum ratione pariatur nulla at eligendi quas alias, ipsum</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+     <h2>Baby Developer</h2>
+     <h3 class="span-class">2022-2024 | Hero Learner</h3>
+     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo quod velit, molestias quae nostrum harum ratione pariatur nulla at eligendi quas alias, ipsum</p>
+            </div>
+      </div>
+   </section>
+   <footer>
+       <p>Copyright © 2022 Programming-hero.com</p>
+   </footer>
 </body>
 </html>
